--- a/src/Chiapos.Dotnet/Chiapos.Dotnet.csproj
+++ b/src/Chiapos.Dotnet/Chiapos.Dotnet.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\3rdparty\3rdparty\fse\src\FiniteStateEntropy\FiniteStateEntropy.csproj" />
+      <ProjectReference Include="..\..\3rdparty\fse\src\FiniteStateEntropy\FiniteStateEntropy.csproj" />
     </ItemGroup>
 
     <ItemGroup>
