Add Blake3 hasher .NET bindings

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "3rdparty/fse"]
 	path = 3rdparty/fse
 	url = https://github.com/xplicit/FiniteStateEntropy
+[submodule "3rdparty/blake3"]
+	path = 3rdparty/blake3
+	url = https://github.com/xplicit/Blake3.NET
