--- a/src/Chiapos.Dotnet/Chiapos.Dotnet.csproj
+++ b/src/Chiapos.Dotnet/Chiapos.Dotnet.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\3rdparty\blake3\src\Blake3\Blake3.csproj" />
       <ProjectReference Include="..\..\3rdparty\fse\src\FiniteStateEntropy\FiniteStateEntropy.csproj" />
     </ItemGroup>
 
