--- a/src/Chiapos.Dotnet/Chiapos.Dotnet.csproj
+++ b/src/Chiapos.Dotnet/Chiapos.Dotnet.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="C5" Version="3.0.0-beta" />
+      <PackageReference Include="Mono.Options" Version="6.6.0.161" />
     </ItemGroup>
 
 </Project>
