--- a/src/Chiapos.Dotnet/Chiapos.Dotnet.csproj
+++ b/src/Chiapos.Dotnet/Chiapos.Dotnet.csproj
@@ -4,7 +4,12 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
         <RootNamespace>Chiapos.Dotnet</RootNamespace>
-        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>        
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <Platforms>x64;Any CPU</Platforms>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
+      <DefineConstants>TRACECOREAPP;</DefineConstants>
     </PropertyGroup>
 
     <ItemGroup>
