--- a/tests/Chiapos.Dotnet.Tests/Chiapos.Dotnet.Tests.csproj
+++ b/tests/Chiapos.Dotnet.Tests/Chiapos.Dotnet.Tests.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net5.0</TargetFramework>
         <IsPackable>false</IsPackable>
         <Platforms>x64;AnyCPU</Platforms>
-        <Configurations>Debug;Release;DebugMac;ReleaseMac</Configurations>
+        <Configurations>Debug;Release;DebugMac;ReleaseMac;DebugLinux;ReleaseLinux</Configurations>
     </PropertyGroup>
 
     <ItemGroup>
