--- a/src/Chiapos.Dotnet/Chiapos.Dotnet.csproj
+++ b/src/Chiapos.Dotnet/Chiapos.Dotnet.csproj
@@ -56,6 +56,7 @@
     <ItemGroup>
       <PackageReference Include="C5" Version="3.0.0-beta" />
       <PackageReference Include="Mono.Options" Version="6.6.0.161" />
+      <PackageReference Include="System.IO.Pipelines" Version="5.0.1" />
     </ItemGroup>
 
 </Project>
