--- a/tests/Chiapos.Dotnet.Benchmarks/Chiapos.Dotnet.Benchmarks.csproj
+++ b/tests/Chiapos.Dotnet.Benchmarks/Chiapos.Dotnet.Benchmarks.csproj
@@ -5,7 +5,8 @@
         <Platforms>x64;AnyCPU</Platforms>
         <Configurations>Debug;Release;DebugMac;ReleaseMac;DebugLinux;ReleaseLinux</Configurations>
         <OutputType>Exe</OutputType>
-        <ValidateExecutableReferencesMatchSelfContained>false</ValidateExecutableReferencesMatchSelfContained>        
+        <ValidateExecutableReferencesMatchSelfContained>false</ValidateExecutableReferencesMatchSelfContained>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>        
     </PropertyGroup>
 
     <ItemGroup>
